Allow for deleting from Lists view, useListings hooks for different components, fix layout items, overflow

--- a/client/src/components/Listings/Listing/Listing.module.css
+++ b/client/src/components/Listings/Listing/Listing.module.css
@@ -7,6 +7,12 @@
 	position: relative;
 }
 
+.Listing-title {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 .card__image {
 	width: 100%;
 }
