--- a/client/src/hoc/Layout/Layout.module.css
+++ b/client/src/hoc/Layout/Layout.module.css
@@ -1,4 +1,5 @@
 .Layout {
-	margin-top: 76px;
+	margin-top: 56px;
 	display: flex;
+	flex-flow: row wrap;
 }
